[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
napi = { version = "2.16.6", features = ["napi4"]}
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
windows = { version="0.57.0", features = ["Win32","Win32_Foundation", "Win32_UI", "Win32_UI_Input", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse","Win32_System","Win32_System_LibraryLoader"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
