[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
napi = { version = "2.16.6", features = ["napi4"]}
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
uiautomation = "0.11.2"
user32-sys = "0.2"
sysinfo = { version="0.29.11"}
windows = {version="0.57", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_LibraryLoader"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
